--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -7,7 +7,11 @@
     <item android:title="Profile"
         android:id="@+id/profile"
         android:icon="@drawable/profile"/>
+    <item android:title="Calendar"
+        android:id="@+id/calendar"
+        android:icon="@drawable/calendar"/>
     <item android:title="Setting"
         android:id="@+id/setting"
         android:icon="@drawable/setting"/>
+
 </menu>
